# code-smaller

./: .gitignore  pyproject.toml  readme.md
smaller/: default.py  sentinel.py  unset.py
smaller/time/: utc.py
