[project]
name = "code-smaller"
version = "0.1.1"
description = "Code-smaller python abstractions"
authors = [{ name = "Ari Fishman", email = "arifishman39@gmail.com" }]
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = []

[project.urls]
"Homepage" = "https://github.com/codesmaller/code-smaller"
"Repository" = "https://github.com/codesmaller/code-smaller"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["smaller*"]